--- a/en/campaign/08.02- Creating, archiving and activating a Campaign.md
+++ b/en/campaign/08.02- Creating, archiving and activating a Campaign.md
@@ -10,7 +10,7 @@ A campaign requires a name and a contact group to receive the events. Each campa
 
 ![](/img/campaign/campaign2.png)
 
-3. Define the campaign name and which group will be connect
+3. Define the campaign name and which group will be connected
 
 ![](/img/campaign/campaign3.png)
 
