--- a/en/campaign/08.03- Adding and Editing an Event to the Campaign.md
+++ b/en/campaign/08.03- Adding and Editing an Event to the Campaign.md
@@ -6,13 +6,13 @@ A campaign event represents an action that will realize a relation with a date a
 
 ![](/img/campaign/campaign10.png)
  
-2. Click on the box “Add Event” on the top right.
+2. Click on the box "Add Event" on the top right.
 
-3. Select the action that you want to attribute an event.
+3. Select the action that you want to attribute to an event.
 
 ![](/img/campaign/campaign12.png)
 
-4. Define the date and time that you want that your event start (it is referred to as the “offset”). The following entries comprehend a displacement:
+4. Define the date and time that you want your event to start (it is referred to as the "offset"). The following entries comprehend a displacement:
 - How many minutes, hours, days, weeks, before or after to select the contact field.
 - The contact field selected.
 - The moment when the event will start.
@@ -25,15 +25,15 @@ You can add how many events as necessary.
 
 To edit when a message or flow will be sent, alter the flow, or change the action Send a Message to Start a Flow as a campaign event:
 
-1. Click on the icon “Campaign” on the top right of the page, and click on the campaign that contains the event that you would like to edit.
+1. Click on the icon "Campaign" on the top right of the page, and click on the campaign that contains the event that you would like to edit.
 
 ![](/img/campaign/campaign13.png)
 
-2. Click on the box “Registration Date” to open the event that you want to edit. Notice that you also can access the group contacts and the flows associated with a event on this page, you just need to click on the hyperlink. 
+2. Click on the box "Registration Date" to open the event that you want to edit. Notice that you also can access the group contacts and the flows associated with an event on this page, you just need to click on the hyperlink. 
 
 ![](/img/campaign/campaign14.png)
 
-3. Click on the box “Edit” on the top right of the page.
+3. Click on the box "Edit" on the top right of the page.
 
 4. Using the drop-down menu on the event actualization dialog box that you can change:
 
@@ -43,4 +43,4 @@ When the flow is started or the message is sent.
 
 ![](/img/campaign/campaign15.png)
 
-5. Click on “Ok” to save the alterations.
+5. Click on "Ok" to save the alterations.
