--- a/en/channels/02.04-Deleting a Channel.md
+++ b/en/channels/02.04-Deleting a Channel.md
@@ -1,6 +1,6 @@
 **To delete a channel from your account, you should:**
 
-1. Click on the account button located on the top right;
+1. Click on the Account button located on the top right;
 
 ![](/img/channel/account.png) 
 
