--- a/en/channels/02.07-Adding Viber channel.md
+++ b/en/channels/02.07-Adding Viber channel.md
@@ -1,5 +1,5 @@
 <div class="align-justify">
-You can add your a Viber's public account as a channel on the platform.
+You can add your Viber's public account as a channel on the platform.
 
 ## Starting the process
 
