--- a/en/contacts/04.02-Adding a Contact.md
+++ b/en/contacts/04.02-Adding a Contact.md
@@ -1,10 +1,10 @@
-#### To create a contact you should: ####
+#### To create a contact you should:
 
 1. Click on the button Contact;
 
 ![](/img/contact/contact.png)
 
-2. Click on the button “Create a Contact” on the bottom left of the page;
+2. Click on the button "Create a Contact" on the bottom left of the page;
 
 ![](/img/contact/create_contact.png)
 
