--- a/en/contacts/04.05-Deleting Fields.md
+++ b/en/contacts/04.05-Deleting Fields.md
@@ -1,10 +1,10 @@
-If you don't need more contacts field, you can delete it, you just need to clear your name on the “Manager Field”. Notice that this will remove all values associated with this field. To remove a contact field, you should:
+If you don't need more contacts field, you can delete it, you just need to clear your name on the "Manager Field". Notice that this will remove all values associated with this field. To remove a contact field, you should:
 
 1. Go to Contacts button;
 
 ![](/img/contact/contact.png)
 
-2. Click on the “Manager Field” button;
+2. Click on the "Manager Field" button;
 
 ![](/img/contact/manage_fields.png)
 
@@ -12,6 +12,6 @@ If you don't need more contacts field, you can delete it, you just need to clear
 
 ![](/img/contact/manage_fields2.png)
 
-4. Click on the  “OK” box to confirm the removing.
+4. Click on the "OK" box to confirm the removing.
 
 ![](/img/contact/manage_fields3.png)
