--- a/en/flows/06.04-Know the Flow Editor.md
+++ b/en/flows/06.04-Know the Flow Editor.md
@@ -1,6 +1,6 @@
 The Flow editor is where all the magic happens, in this space, you will be able to build your flows and drive your contacts through it. Here we provide you with the main features of both old and new flow editor.
 
-#### Flow Editor Anatomy - Old Editor ####
+#### Flow Editor Anatomy - Old Editor
 
 **1. Name**
 
@@ -21,8 +21,8 @@ The actions editor starts with the action Send Message, although you can click o
 - Split Editor
 
  The split editor allows you to create articulation points in your flow on the form of conditionals declarators. As explained in our introductory page, the rules editor is composed by:
- 1. A type of value -  “When someone is on this flow point…”;
- 2. Responses rules that evaluated the type of selected value - “If the message response…”;
+ 1. A type of value -  "When someone is on this flow point…";
+ 2. Responses rules that evaluated the type of selected value - "If the message response…";
  3. The specifics values that you are evaluating for;
  4. The categories that the correspondents values to response rules are located;
  5. The given name to the resulted variable.
@@ -39,11 +39,11 @@ Here you will be able to check flow results, edit your flow, copy and export you
 
 ![](/img/flow/menusettings.png)
 
-#### Results ####
+#### Results
 
 Click on the results options to see the results connected to the editing flow.
 
-#### Edit ####
+#### Edit
 Click on the Edit option to:
 
  1. Alter the flows name;
@@ -53,27 +53,27 @@ Click on the Edit option to:
 
 ![](/img/flow/flow17.png) 
 
-#### Copy ####
+#### Copy
 
 Click on this option to make an identical copy of the editing flow.
 
-#### Export ####
+#### Export
 
 Click on this option to export a flow that you are editing as a JSON file.
 
-#### Review Historical ####
+#### Review Historical
 
 Click on this option to visualize the review historical flow that you are editing. Click on a review to see the flow version or return to that point.
 
-#### Delete ####
+#### Delete
 Click on this option to delete the flow that you are editing.
 
-#### New Editor ####
+#### New Editor
 Click on this option to migrate your flow from the old editor version to the new editor version.
 
 **5. Start a Flow**
 
-Click on this button to put the contacts on the flow. You can add specifics contacts or groups. Select the “Restart any contacts who have already entered on this flow” if you want to restart the active members on the flow.
+Click on this button to put the contacts on the flow. You can add specifics contacts or groups. Select the "Restart any contacts who have already entered on this flow" if you want to restart the active members on the flow.
 
 ![](/img/flow/flow19.png)
 
@@ -81,10 +81,8 @@ Click on this button to put the contacts on the flow. You can add specifics cont
 
 In the New Editor you will also be able to build your flows and drive your contacts through it. There are some anotomical diferentes between the new and the old editor as follow:
 
-####Actions and Split Actions are shown in the same drop-down menu.####
+#### Actions and Split Actions are shown in the same drop-down menu.
 
 To access the split actions in the old editor you had to click on the ramification icon on the top right of the action set. For the new editor you can found action and split actions in the same drop-down menu.
 
 ![](/img/flow/editoranatomy.png)
-
-
