--- a/en/flows/06.05- Defining Keywords for a flow.md
+++ b/en/flows/06.05- Defining Keywords for a flow.md
@@ -1,8 +1,8 @@
 You can attribute keyword(s) to a flow to allow your contacts to start it by using the criteria you set. A keyword is the first word in an incoming message.
 
-#### To attribute a keyword in a flow: ####
+#### To attribute a keyword in a flow:
 
-1. Go to the “flow” 
+1. Go to the "flow"
 
 ![](/img/flow/flow20.png)
 
@@ -10,7 +10,7 @@ You can attribute keyword(s) to a flow to allow your contacts to start it by usi
 
 ![](/img/flow/flow21.png)
 
-3. Select “Edit” on the configuration icon on the top right of the flow editor.
+3. Select "Edit" on the configuration icon on the top right of the flow editor.
 
 ![](/img/flow/flow22.png)
 
@@ -18,6 +18,6 @@ You can attribute keyword(s) to a flow to allow your contacts to start it by usi
 
 ![](/img/flow/flow23.png)
 
-#### Ignoring triggers ####
+#### Ignoring triggers
 
-You can select the “Ignore triggers” option to avoid that your contacts start another flow. When this option is selected, a contact cannot start a new flow if he send a message containing the keyword attributed to this specific flow.
+You can select the "Ignore triggers" option to avoid that your contacts start another flow. When this option is selected, a contact cannot start a new flow if he sends a message containing the keyword attributed to this specific flow.
