--- a/en/flows/06.06-Starting a Flow.md
+++ b/en/flows/06.06-Starting a Flow.md
@@ -2,7 +2,7 @@ If your contacts want to interact with a flow it should be initialized.
 
  A flow can be initialized in different ways:
 
- 1. You can initialize manually a flow whenever you want by clicking on the box “Start a flow” on the flow editor:
+1. You can initialize manually a flow whenever you want by clicking on the box "Start a flow" on the flow editor:
 
  ![](/img/flow/startflow.png)
 
@@ -12,4 +12,3 @@ If your contacts want to interact with a flow it should be initialized.
 5. A flow can be started after a missed call;
 6. A flow can be started after a received call;
 7. A flow can be started after receiving a message not handled elsewhere.
-
