--- a/en/flows/06.11-Classifing and Deleting Contacts in Groups.md
+++ b/en/flows/06.11-Classifing and Deleting Contacts in Groups.md
@@ -1,4 +1,4 @@
-## Adding contacts to a group ##
+## Adding contacts to a group
 
 **Old Editor**
 
@@ -14,7 +14,7 @@
 
 ![](/img/flow/flow32.png)
 
-## Deleting Contacts from a Group ##
+## Deleting Contacts from a Group
 
 Use the “Remove contact from a group” to remove a contact from a group frow a flow.
 
@@ -26,7 +26,7 @@ Choose the group(s) that you want to remove the contact from.
 
 **New Editor**
 
-## Adding contacts to a group ##
+## Adding contacts to a group
 
 1.	Go to the flow editor;
 
@@ -40,7 +40,7 @@ Choose the group(s) that you want to remove the contact from.
 
 ![](/img/flow/groupchoose.png)
 
-## Deleting Contacts from a Group ##
+## Deleting Contacts from a Group
 
 1. Use the "Remove the contact from a Group" to remove a contact from a group from the flow
 
