--- a/en/flows/06.14-Starting Another Flow.md
+++ b/en/flows/06.14-Starting Another Flow.md
@@ -11,9 +11,9 @@
 
 To move a contact from a flow to another in the old flow editor do as follow: 
 
-1. Select “Start another flow” option 
+1. Select "Start another flow" option 
 
-2. Select the flow you want your contact to enter and click on “ok”.
+2. Select the flow you want your contact to enter and click on "ok".
 
 ![](/img/flow/startanotherflow3.png)
 
@@ -25,17 +25,14 @@ You can do it for any other contact’s variable you want to access in the new f
 
 To move a contact from a flow to another in the new flow editor do as follow: 
 
-1. Select “enter another flow” option 
+1. Select "enter another flow" option.
 
-2. Select the flow you want your contact to enter and click on “ok”.
+2. Select the flow you want your contact to enter and click on "ok".
 
 ![](/img/flow/startanotherflow2.png)
 
 **Parent results**
 When the contact enters another flow you can access the contacts variables created in the parent flow by using the following expression:
-@parent.results.email If you want to access the contact’s email
+@parent.results.email If you want to access the contact’s email.
 @parent.results.phone if you want to access the contact’s phone.
-You can do it for any other contact’s variable you want to access in the new flow
-
-
-
+You can do it for any other contact’s variable you want to access in the new flow.
