--- a/en/flows/06.19- Creating a Flow in Different Languages.md
+++ b/en/flows/06.19- Creating a Flow in Different Languages.md
@@ -1,4 +1,4 @@
-After defining the first and second language for your account, you can edit your flows to alter between different languages according to your contacts languages preferences. 
+After defining the first and second languages for your account, you can edit your flows to alter between different languages according to your contacts' language preferences. 
 
 You can create flows in different languages, following these steps:
 
@@ -15,15 +15,15 @@ You can create flows in different languages, following these steps:
 5. Each yellow box means that it was not translated yet;
 
 ![](/img/flow/flow68.png)
- 
+ 
 6. Click on the box to add the translated text;
 
 ![](/img/flow/flow69.png)
 
-Notice that: @contact.first_name and other variables do not should be translated, because they will be replaced by the correspondents values when the message is sent.
+Notice that: @contact.first_name and other variables do not should be translated, because they will be replaced by the correspondents' values when the message is sent.
 
 7. The translated steps appear in white while the messages in the first language still yellow.
 
 ![](/img/flow/flow70.png)
 
-8.When the flow is totally translated, the contacts will receive messages according to their languages preferences.
+8. When the flow is totally translated, the contacts will receive messages according to their language preferences.
