--- a/en/flows/06.22-Visualizing and Exporting Variables.md
+++ b/en/flows/06.22-Visualizing and Exporting Variables.md
@@ -1,17 +1,17 @@
-## Visualizing Results ##
-When your contacts interact with a flow, your answers will be storage as a flow result that you can access selecting “Results”  on the drop-down menu on the configure icon on the flow editor.
+## Visualizing Results
+When your contacts interact with a flow, your answers will be stored as a flow result that you can access selecting "Results" on the drop-down menu on the configure icon on the flow editor.
 
 ![](/img/flow/flow70.png)
 
-The resulting page will provide a “Download” button and a list with all contacts that interact with the flow and how many time it happened. The passages through a flow (all activities that happen in) constitutes a flow:
+The resulting page will provide a "Download" button and a list with all contacts that interact with the flow and how many times it happened. The passages through a flow (all activities that happen in) constitutes a flow:
 They complete the flow;
 Start another flow through Start Another Flow Action, or;
 Expires the flow after an inactive period (you determine it).
 
 ![](/img/flow/flow71.png)
- 
-## Visualizing Runs ##
-Clicking on the contact Runs value from a contact that will  leave you to a page that shows the content from each Run, through a simulator.
+ 
+## Visualizing Runs
+Clicking on the contact Runs value from a contact that will leave you to a page that shows the content from each Run, through a simulator.
 
 ![](/img/flow/flow72.png)
 
@@ -24,15 +24,15 @@ Runs comprehend the lines that compound your exporting results spreadsheet where
 - The moment when your Run finished
 - and the responses for each question
 
-## Exporting the results from multiple flows ##
+## Exporting the results from multiple flows
 
-To export results from various flows, go to the “flows” guide and select the flows boxes that you would like to export, after that, click on the exportation icon that is located on the top of your flows when you select one or more flows.
+To export results from various flows, go to the "flows" guide and select the flow boxes that you would like to export, after that, click on the exportation icon that is located on the top of your flows when you select one or more flows.
 
 ![](/img/flow/flow73.png)
 
-## Downloading the results ##
+## Downloading the results
 
-After click on the “Download Resulting” button, the flow exportation resulting dialog box will appear.
+After click on the "Download Resulting" button, the flow exportation resulting dialog box will appear.
 
 ![](/img/flow/flow74.png)
 
@@ -43,8 +43,8 @@ After click on the “Download Resulting” button, the flow exportation resulti
 - Export all sending and received messages on the flow;
 - Includes all Runs for each contact.
 
-After to click on ‘OK’, will present a request indicating a link to a page where you could download the results that were sent to email address associated with your account.
-Depending the selected configurations that you selected on the dialog box ‘Resulting Exportation Flow’,  the XLS exported will contain 3 guides:
+After to click on 'OK', will present a request indicating a link to a page where you could download the results that were sent to email address associated with your account.
+Depending the selected configurations that you selected on the dialog box 'Resulting Exportation Flow', the XLS exported will contain 3 guides:
 
 **Runs:** A contact can pass through a flow more than once, so the guide Runs exhibit how many times the contact passed by.
 Contacts: The contacts guide show the last run values (and the last value for each step on the flow, and what can been visited more than once, if the contact has never been redirected for him).
@@ -62,6 +62,6 @@ Each response is presented in three columns - Category, value, and text:
 
 - The column Category contains the category where the contact response was located according to the response rules attributed. As the message above indicates, any answer containing 1, y, sim, s or yes is classified as Yes.
 
-- The value column contains the value catched for a response rule. If the received message read “Yes or No”, the collected value will be Yes because the response contained a valued correspondent to a word that you specified using the Has Any of These Words. In the other way, if a contact answer just with one of the words specified by the response rule (Yes), the value and text columns will contain the same value.
+- The value column contains the value catched for a response rule. If the received message read "Yes or No", the collected value will be Yes because the response contained a valued correspondent to a word that you specified using the Has Any of These Words. In the other way, if a contact answer just with one of the words specified by the response rule (Yes), the value and text columns will contain the same value.
 
-- The text column contains the complete response text, for example, “Yes, I am.”
+- The text column contains the complete response text, for example, "Yes, I am."
