--- a/en/groups/05.03- Adding or Removing a Contact to a Group.md
+++ b/en/groups/05.03- Adding or Removing a Contact to a Group.md
@@ -1,6 +1,6 @@
-## To add a contact to a group: ##
+## To add a contact to a group:
 
-1. Go to “Contacts” guide;
+1. Go to "Contacts" guide;
 
 ![](/img/groups/contact.png)
 
@@ -12,16 +12,16 @@
 
 ![](/img/groups/Add_to_a_group.png)
 
-## Add a contact to a group through a flow: ##
-1. You can add a contact to a group or remove it with a flow action “Add a contact to a group” or “Remove a contact from a group”. On the example below, we are using an action “Split by Contact Field” to direct the contacts living in Alagoas to the group “Alagoas”.
+## Add a contact to a group through a flow:
+1. You can add a contact to a group or remove it with a flow action "Add a contact to a group" or "Remove a contact from a group". In the example below, we are using an action "Split by Contact Field" to direct the contacts living in Alagoas to the group "Alagoas".
 
 ![](/img/groups/flow1.png)
 
-2. We can do this splitting our contacts using the option “State”. The option “has any of these words” allows us to create a rule to locate contacts with the “State” field containing any of these words: “Maceio”, “Arapiraca”, “Maragogi”, etc. in the category “Alagoas”.
+2. We can do this splitting our contacts using the option "State". The option "has any of these words" allows us to create a rule to locate contacts with the "State" field containing any of these words: "Maceio", "Arapiraca", "Maragogi", etc. in the category "Alagoas".
 
 ![](/img/groups/flow2.png)
 
-## Delete a contact from a group: ##
+## Delete a contact from a group:
 
 1. Go to contacts;
 
