--- a/en/triggers/07.01-Introduction to Triggers.md
+++ b/en/triggers/07.01-Introduction to Triggers.md
@@ -9,8 +9,8 @@ Click *Create a message keyword that launches a flow* to start.
   - *Message starts with the keyword* - If the phrase typed for the user starts with the keyword, the chosen flow will take action;
   - *Message contains only the keyword* - The chosen flow will take action if the user types only the single keyword set;
 - On *Flow* is set the flow to be started;
-- On *Only groups*, is possible to apply the rules from this trigger to specific contact's groups, just leave the blank space if you want to apply this rule to everyone.
+- On *Only groups*, is possible to apply the rules from this trigger to specific contact groups, just leave the blank space if you want to apply this rule to everyone.
 
-An usecase is starting a welcome flow when a person sends "hello" to be registered into the organization and become a contact, as the picture:
+A use case is starting a welcome flow when a person sends "hello" to be registered into the organization and become a contact, as the picture:
 
 ![](/img/triggers/TriggersKeyword02.png)
