--- a/en/campaign/08.01-Campaing Introduction.md
+++ b/en/campaign/08.01-Campaing Introduction.md
@@ -1,7 +1,7 @@
 Campaigns allow scheduled messages and flow around a specific date, as a register or bought date. Campaigns are most of the time use dripping communication*, as the maternity remembers, therapy remembers, or messages that correspond to the product or service life cycle.
 
 - The message timing follows a predetermined course.
-- The messages are send with a defined standard, to a specific behaviour or the addressees state.
+- The messages are sent with a defined standard, to a specific behavior or the addressees' state.
 
 *Dripped messages or flows are started by campaign events, that comprehends a campaign. Each campaign can contain how many events are necessary.*
 
@@ -9,6 +9,6 @@ Dripped communication is a communication strategy that sends, or “drip”, a p
 
 **The Campaign**
 
-The campaign requires a title, as a contact group to send the events. Each campaign can only operate in a group; a new campaign is necessary for each group that you want to interact.
+The campaign requires a title, as a contact group to send the events. Each campaign can only operate in a group; a new campaign is necessary for each group that you want to interact with.
 
 A campaign event represents an action that is realized relating the date and time value storage into a contact field. A campaign event should define which contact field it will be defined, the definitions for the field (how many minutes, hours, days, weeks before or after the field value contact), as the action to the executed (send a message or start a flow).
