--- a/en/channels/02.01-Channels Introduction.md
+++ b/en/channels/02.01-Channels Introduction.md
@@ -1,32 +1,32 @@
 <div class="align-justify">
 
-Channels are the bridge that connect the chat you build on Rapid Pro to your contacts. It allows your workspace to broadcast polls you create. There are more than 20 channels available in Rapid Pro and they can be classified as follow:
+Channels are the bridge that connects the chat you build on Rapid Pro to your contacts. It allows your workspace to broadcast polls you create. There are more than 20 channels available in Rapid Pro and they can be classified as follow:
 
 ### Channels Type ###
 
 **Android Phones:** 
-Allow you to send SMS from platform using an android phone. This channel is recommended only if you are planning to send a low number of messages.
+Allow you to send SMS from the platform using an android phone. This channel is recommended only if you are planning to send a low number of messages.
 
 **Phone channels:** 
 Allow you to send voice messages or SMS from the platform to your contacts through a phone. You will need a local sim card number to activate these channels.
 
 **Social Network channels:**
-Use popular social networks as Facebook messenger, twitter, telegram, viber and so on to create a bridge between your contact and the polls you want to broadcast from the platform. 
+Use popular social networks as Facebook messenger, twitter, telegram, Viber and so on to create a bridge between your contact and the polls you want to broadcast from the platform. 
 
 **API channels:** 
 allow you to connect an external aggregator or messaging service to the platform using our external API.
 
-*You can connect as much channels as you want, but it’s important to consider carefully which channels will be more popular among your contacts.*
+*You can connect as many channels as you want, but it’s important to consider carefully which channels will be more popular among your contacts.*
 
 ### Aggregator (SMS and Voice)###
 
- Aggregators are services that process messages through multiples operators efficiently and fastly. It processes virtual numbers and codes that are easily connected on your account through integration with the platform. Twilio, Plivo, Nexmo are examples of globals aggregators and Clickatell and Zevia are examples of locals aggregators. We recommend searching local aggregators before connect with a global aggregator (the price of local aggregators are usually  cheaper than global aggregators).
- 
+ Aggregators are services that process messages through multiples operators efficiently and fastly. It processes virtual numbers and codes that are easily connected to your account through integration with the platform. Twilio, Plivo, Nexmo are examples of globals aggregators and Clickatell and Zevia are examples of locals aggregators. We recommend searching local aggregators before connect with a global aggregator (the price of local aggregators is usually cheaper than global aggregators).
+ 
 **Android Phones:** 
 
- The Android Phone channel uses our Android Free App to transform your phone in a message transmitter to your account. When your account sends a message, your cell phone will be notified. The cell phone will send a message using your local number and your name. If someone answers this message, the cell phone will retransmit the message to your workspace. You can send until 330 messages by an hour. 
+ The Android Phone channel uses our Android Free App to transform your phone in a message transmitter to your account. When your account sends a message, your cell phone will be notified. The cell phone will send a message using your local number and your name. If someone answers this message, the cell phone will retransmit the message to your workspace. You can send up to 330 messages by an hour. 
 
- We recomend this channel if you:
+ We recommend this channel if you:
 
 - Want to send a message immediately;
 - Are developing a service that is waited to send more than 330 messages per hour;
@@ -35,17 +35,17 @@ allow you to connect an external aggregator or messaging service to the platform
 
 **SMS:** 
 
-This channel is recommended to medium and high flows because the messages are forwarded in their highest frequency. The transfer tax for free numbers from Twilio is 3 messages by second, while the standard transfer tax is a message by second. We recommend you to buy a free virtual number by Twilio to implement the SMS service on USA and Canada, to more locals we recommend to buy a conventional number.
+This channel is recommended to medium and high flows because the messages are forwarded in their highest frequency. The transfer tax for free numbers from Twilio is 3 messages by second, while the standard transfer tax is a message by second. We recommend you to buy a free virtual number by Twilio to implement the SMS service on the USA and Canada, to more locals we recommend to buy a conventional number.
 
 **Voice:** 
 
 Use a Twilio number with voice available (can be by default or toll-free) to send and receive voice messages or connect your Twilio voice and an Android Phone with your workspace.
-You can try our demonstrative voice flow through the phone number +1 888-531-0777, or sending an SMS with the word “Hey”. Notice that this is a number located in the USA. 
-Discount for unprofitable organizations: Twilio offer US$ 500 in credits and 25% discount to unprofitable organizations.
+You can try our demonstrative voice flow through the phone number +1 888-531-0777, or sending an SMS with the word "Hey". Notice that this is a number located in the USA. 
+Discount for unprofitable organizations: Twilio offers US$ 500 in credits and 25% discount to unprofitable organizations.
 
 ### Bulk Sending
 
-This channel is ideal for Android channels implementations that need to send more than 330 messages per hour. You will need to create and connect a Nexmo account in your workspace. When you enable the Sending Bulk, Nexmo will be responsible to send your messages keeping the sender identification in your Android Cell Phon, our Android will take care of the received messages then. The transfer tax is a message per second. 
+This channel is ideal for Android channel implementations that need to send more than 330 messages per hour. You will need to create and connect a Nexmo account in your workspace. When you enable the Sending Bulk, Nexmo will be responsible to send your messages keeping the sender identification in your Android Cell Phon, our Android will take care of the received messages then. The transfer tax is a message per second. 
 
 ### Surveyor
 
@@ -53,15 +53,15 @@ The RapidPro Surveyor Android App allows that you monitor the workflow to glean 
 
 ### Telegram
 
-Telegram is a service based on the cloud to send messages instantly - similar to WhatsApp and WeChat - focused on speed and security. It is open source and encrypted end-to-end, what means that all data sent or received by telegram cannot be interpreted when intercepted for ISP, networking admin or others. The transfer tax is 30 messages per second.
+Telegram is a service based on the cloud to send messages instantly - similar to WhatsApp and WeChat - focused on speed and security. It is open-source and encrypted end-to-end, which means that all data sent or received by telegram cannot be interpreted when intercepted for ISP, networking admin or others. The transfer tax is 30 messages per second.
 
 ### Twitter
 
-Connect your twitter account and send up to 1000 direct messages per day through your RapidPro account.
+Connect your Twitter account and send up to 1000 direct messages per day through your RapidPro account.
 
 ### Facebook Messenger
 
-Connect a Facebook page account your RapidPro workspace to communicate with your contacts.
+Connect a Facebook page account to your RapidPro workspace to communicate with your contacts.
 
 ### External API
 
