--- a/en/channels/02.05-Using a Android CellPhone as a Channel.md
+++ b/en/channels/02.05-Using a Android CellPhone as a Channel.md
@@ -2,11 +2,11 @@ When your account sends a message, it notifies your Android phone. The phone wil
 
 **1. Buy an Android phone**
 
-We recommend purchasing a single-SIM Android phone, and dedicating it to processing your messages. Android phones are both capable and inexpensive, and becoming more accessible every month.
+We recommend purchasing a single-SIM Android phone and dedicating it to processing your messages. Android phones are both capable and inexpensive, becoming more accessible every month.
 
 **2. Acquire a local SIM card**
 
-If you don't already have one, you'll want to acquire a SIM card from your local carrier of choice. We recommend setting the account up to be data enabled. However, if you feel comfortable relying on your Wi-Fi connection, that's okay too. We also encourage that the account be on a post-paid plan so you don't have to worry about the phone running out of credit.
+If you don't already have one, you'll want to acquire a SIM card from your local carrier of choice. We recommend setting the account up to be data enabled. However, if you feel comfortable relying on your Wi-Fi connection, that's okay too. We also encourage that the account is on a post-paid plan so you don't have to worry about the phone running out of credit.
 
 **3. Install the mobile application**
 
@@ -14,7 +14,7 @@ You can download the free Android app here. Once the app is installed, it will g
 
 **4. Give the phone a good home**
 
-Android phones are great because they can be used in even the most challenging environments. You only need to locate one place in the country where you will have the most reliable power and good phone signal. You will need either a Wi-Fi or GSM data connection, but if you can get both, even better. The phone will be smart about which network to use if one connection isn't working well. Note that you can use the Alarm Events webhook to keep track of the status of your phone and make sure it's connected to the network, charged and able to send text messages. In order to help you manage it's state, the platform will send you events when an alarm condition occurs with your phone.
+Android phones are great because they can be used in even the most challenging environments. You only need to locate one place in the country where you will have the most reliable power and a good phone signal. You will need either a Wi-Fi or GSM data connection, but if you can get both, even better. The phone will be smart about which network to use if one connection isn't working well. Note that you can use the Alarm Events webhook to keep track of the status of your phone and make sure it's connected to the network, charged and able to send text messages. In order to help you manage its state, the platform will send you events when an alarm condition occurs with your phone.
 
 Installing the Android Application, to review, you'll need:
 
@@ -67,4 +67,3 @@ Installing the Android Application, to review, you'll need:
 ![](/img/channel/android10.png)
 
 And it’s done! You just got an SMS channel connected using your android phone.
-
