--- a/en/contacts/04.01-Contact Introduction.md
+++ b/en/contacts/04.01-Contact Introduction.md
@@ -19,20 +19,20 @@ A contact is a final user that interacted or will interact with the RapidPro. Th
 
 ![](/img/contact/split.png)
 
-**Contacts Addresses:** Each contact has an address, or URN, where the account messages are sent. The contact addresses are a kind of standard field, like Name and Groups.  Addresses represent the ways that you can connect with their contacts. The most common type of address is phone number, although contact can have a Twitter, Telegram, email address and any external identification that you want to add. To each contact can attribute various addresses with the same type, in other ways, you can attribute different phone numbers to a unique contact. A contact address can be prioritized, so they will be organized using the priority order in the contact profile page.
+**Contacts Addresses:** Each contact has an address, or URN, where the account messages are sent. The contact addresses are a kind of standard field, like Name and Groups.  Addresses represent the ways that you can connect with their contacts. The most common type of address is phone number, although contact can have a Twitter, Telegram, email address and any external identification that you want to add. Each contact can attribute various addresses with the same type, in other ways, you can attribute different phone numbers to a unique contact. A contact address can be prioritized, so they will be organized using the priority order in the contact profile page.
 
 ![](/img/contact/contacts2.png)
 
 Besides this, the prioritized address will appear in the contacts page.
 
-#### Making reference to a contact in the flow ####
+#### Making reference to a contact in the flow
 
 There are two ways to make a reference to the contacts fields into the flow: 
 
-**@contact-** reference the contact that is receiving the message. On most of the cases, this is an active contact. When you use “Send a Message to Someone”, @contact refer to the contact or group that the message is sent. 
+**@contact-** reference the contact that is receiving the message. In most cases, this is an active contact. When you use "Send a Message to Someone", @contact refers to the contact or group that the message is sent. 
 
-**@Step.contact-** reference the contact that sends the last message processed by the flow. In most cases, this is also an active contact. To use the “Send an SMS Response”, @step.contact and @contact are the same contacts. To use the  “Send a Message to Someone”, @step.contact refer to the contact that received a message to the “Send a Message to Someone” into the flow, through triggers.
+**@Step.contact-** reference the contact that sends the last message processed by the flow. In most cases, this is also an active contact. To use the "Send an SMS Response", @step.contact and @contact are the same contacts. To use the  "Send a Message to Someone", @step.contact refer to the contact that received a message to the "Send a Message to Someone" into the flow, through triggers.
 
 ![](/img/contact/send_msh.png)
 
-As the message created by “Send a Message to Someone Else” was sent to Nelson RapidPro, @contact.first_name will be replaced for Nelson. @step.contact.name and @step.contact.tel will be replaced for the user name and phone number that needs support.
+As the message created by "Send a Message to Someone Else" was sent to Nelson RapidPro, @contact.first_name will be replaced for Nelson. @step.contact.name and @step.contact.tel will be replaced for the user name and phone number that needs support.
