--- a/en/contacts/04.04-Adding New Fields.md
+++ b/en/contacts/04.04-Adding New Fields.md
@@ -1,6 +1,6 @@
-All contacts can be attributed to some attributes called contact fields, they have values with their names, phone numbers and any other individual information that you want to include. The contacts field are split into two types, default fields, and personalized fields, and they can support 3 types of values: text, numbers or date and time. When a contact field is created, the dafault value is null, unless the field was imported from a spreadsheet with a pre-existing value or actualized when a contact requires an actualization action on the flow. The contacts fields can be added to the contacts using the method described below or interaction with a flow using a contact actualization. 
+All contacts can be attributed to some attributes called contact fields, they have values with their names, phone numbers and any other individual information that you want to include. The contacts field are split into two types, default fields, and personalized fields, and they can support 3 types of values: text, numbers or date and time. When a contact field is created, the default value is null, unless the field was imported from a spreadsheet with a pre-existing value or updated when a contact requires an actualization action on the flow. The contacts fields can be added to the contacts using the method described below or interaction with a flow using a contact actualization. 
 
-#### To add a new field you should: ####
+#### To add a new field you should:
 
 1. Nav to the contacts, click on the “Manage Fields” button
 
@@ -14,7 +14,7 @@ All contacts can be attributed to some attributes called contact fields, they ha
 
 4. After that, you can add a contact field, consult his value using the variable @contact[fields name]. For example, the field “age” on the tutorial below can be referenced using @contact.age.
 
-#### Actualize the field value: ####
+#### Update the field value:
 
-To alter a contact field value newly-created, you can actualize it using the contact actualization through the flow or editing a value on the contact field clicking on the contacts button.
-For example, when a new phone number send a message to a channel connected with your account, a new contact will be created with the name value null and null values for each contact field that you added. The new contact will be identifiable for his phone number when you actualize the other fields values.
+To alter a contact field value newly-created, you can update it using the contact actualization through the flow or editing a value on the contact field clicking on the contacts button.
+For example, when a new phone number sends a message to a channel connected with your account, a new contact will be created with the name value null and null values for each contact field that you added. The new contact will be identifiable for his phone number when you update the other field's values.
