--- a/en/contacts/04.09-Importing Contacts.md
+++ b/en/contacts/04.09-Importing Contacts.md
@@ -1,13 +1,13 @@
-The contacts importation allows you to add an entire groups to the platform using a simple XLS (MS Excel) spreadsheet. The contacts will be placed in a new contact group that corresponds to a spreadsheet imported name. Notice that, you should connect a channel to your account to import contacts. 
+The contacts importation allows you to add an entire group to the platform using a simple XLS (MS Excel) spreadsheet. The contacts will be placed in a new contact group that corresponds to a spreadsheet imported name. Notice that, you should connect a channel to your account to import contacts. 
 
 **To import contacts, import an XLS spreadsheet containing:**
-- Address´s column corresponds to each address contacts and can contain (the number columns contains the phone number using the E164 format, and/or a Telegram column containing the Telegram identification, and/or a Twitter column for each contact, and/or email column). When imported, the Ilhapush will show the contacts phone number without the country code.
-- The name´s column contains the first name and the surname of each contact.
+- Address's column corresponds to each address contacts and can contain (the number columns contains the phone number using the E164 format, and/or a Telegram column containing the Telegram identification, and/or a Twitter column for each contact, and/or email column). When imported, the Ilhapush will show the contacts phone number without the country code.
+- The name's column contains the first name and the surname of each contact.
 - (Conditional) A UUID column contains the identification universally exclusive for each contact that you want to import. This column can replace the name column, it is necessary to import a spreadsheet with the intention to add a new address or kind of address.
 - (Optional) The language column represents the main language containing ISO 639-2 standard nomenclature to classify the included languages.
 - (Optional) Any added column number corresponds to a personalized attribute* (contacts field) containing the contacts value fields. Observe the column names are limited to 36 characters and don't support special characters.
 
-*Observe that, when you want to import a date value to Ilhapush but without a time value, the Ilhapush will atributte a 00:00 time value.Although, to add manually just a data value to each contact field, the Ilhapush will replace the correspondent time value with the time moment that you actualized the field.*
+*Observe that, when you want to import a date value to Ilhapush but without a time value, the Ilhapush will attribute a 00:00 time value. Although to add manually just a data value to each contact field, the Ilhapush will replace the correspondent time value with the time moment that you updated the field.*
 
 ![](/img/contact/import_contact.png)
 
@@ -17,11 +17,11 @@ The contacts importation allows you to add an entire groups to the platform usin
 
 ![](/img/contact/contact.png)
 
-2. Click on “Import Contacts” button;
+2. Click on "Import Contacts" button;
 
 ![](/img/contact/contacts.png)
 
-3. Download and edit the provided model (or you can choose your file) and send using the button “Choose a file”;
+3. Download and edit the provided model (or you can choose your file) and send using the button "Choose a file";
 
 ![](/img/contact/import_contact.png)
 
@@ -33,5 +33,4 @@ The contacts can be imported with different addresses, but just one address for 
 
 - The contacts addresses can be added through an importation if the UUID column contains contacts UUID(s). The UUIDs can be obtained through a contacts exportation or using a contacts list on the API Explorator:
 
-- Exported contacts contained the UUIDs for their contacts, names, addresses and personalized fields. To exports, your contacts, go to Contacts guide, go to configure menu icon and select “Export”.
-
+- Exported contacts contained the UUIDs for their contacts, names, addresses and personalized fields. To exports, your contacts, go to Contacts guide, go to configure menu icon and select "Export".
