--- a/en/facebook/12.01- Facebook Channel.md
+++ b/en/facebook/12.01- Facebook Channel.md
@@ -2,7 +2,7 @@ To add the bot to Facebook chat it is necessary first to understand the tools in
 
 Creating a Facebook Page – Such a profile, a page is linked to an establishment, entity, body, or service. This page is where users will have access to chatbot through Facebook Messenger. Posts, comments, posts sharing or markings will not be interpreted by the chatbot.
 
-Creating an App – In the website for Facebook developers should be created an application that will acts as a messaging gateway. During development/testing the app gives access to chatbot only to its administrators, to make the app public access it needs to go through an evaluation process and fulfill some Facebook requirements.
+Creating an App – On the website for Facebook developers should be created an application that will act as a messaging gateway. During development/testing, the app gives access to chatbot only to its administrators, to make the app public access it needs to go through an evaluation process and fulfill some Facebook requirements.
 
 Link app with chat – You need to configure app-supplied tokens as well as webhooks with callback URLs.
 
@@ -26,7 +26,7 @@ Give a name and place the email that will be responsible for the app.
 
 ![](/img/facebook/fb3.jpeg)
 
-At this point you may receive a validation request.
+At this point, you may receive a validation request.
 
 On the main management screen of your new app add Messenger by clicking Configure in the Messenger section.
 
@@ -43,7 +43,7 @@ Important
 
 The profile that generates the Token cannot have its permission to the app changed or be removed. Should this occur the Token will become invalid and the app will stop working until the process is running again.
 
- ![](/img/facebook/fb6.jpeg)
+ ![](/img/facebook/fb6.jpeg)
 
 After this procedure, an Access Token will be generated, which will be configured in the platform.
 
@@ -53,12 +53,12 @@ After this procedure, an Access Token will be generated, which will be configure
 
 With the Page Access Token, open the properties of your Org in the platform (click the Org name in the upper right corner of the screen) and then select the add channel option.
 
- ![](/img/facebook/fb8.jpeg)
+ ![](/img/facebook/fb8.jpeg)
 
 
 Scroll down to the social media channels section and select the Facebook option.
 
- ![](/img/facebook/fb9.jpeg)
+ ![](/img/facebook/fb9.jpeg)
 
 On the add channel screen fill in the Access Token (identifier you generated in the app), Page Name (for channel ID), and Page ID (this number can be purchased in the About section of your page).
 
@@ -76,7 +76,7 @@ Go back to the App on the Facebook developer site and go to Configure Webhooks w
 
 Fill in the information according to the data generated in the addition of your channel in the platform, check the Messages, Messaging_postbacks, Messaging_optins, Message_deliveries and Messanging_referrals options and click Check and Save.
 
- ![](/img/facebook/fb13.jpeg)
+ ![](/img/facebook/fb13.jpeg)
 
 When you complete this procedure, make sure that the parameters have been correctly selected and that page has been properly entered in the Webhooks.
 
@@ -89,7 +89,7 @@ Now all we need is to configure how the conversation will be interpreted by the 
 
 From the available options select the one as shown in the figure below, which will cause a Get Started button to appear on the chat once a new conversation with the page is started and thus allow the user to approve the exchange of messages with the chatbot.
 
- ![](/img/facebook/fb16.jpeg)
+ ![](/img/facebook/fb16.jpeg)
 
 Select the Facebook channel you just created, the flow that will be triggered when you the conversation is started, and click Create Trigger.
 
@@ -109,4 +109,3 @@ And clicking on Get Started chatbot takes over.
 ![](/img/facebook/fb20.jpeg)
 
 Note: Perform all bot functionality tests and make any necessary adjustments. Only after everything is OK, start the approval process to make the app public.
-
