--- a/en/flows/06.03-Creating a New Flow.md
+++ b/en/flows/06.03-Creating a New Flow.md
@@ -1,21 +1,21 @@
 To create a flow:
 
-1. go to the guide “flows” 
+1. go to the guide "flows" 
 
 ![](/img/flow/flow12.png)
 
-2. click on the button “Create a flow”.
+2. click on the button "Create a flow".
 
 ![](/img/flow/flow13.png)
 
-**The dialog box “Create a Flow” will appear, so you can:**
+**The dialog box "Create a Flow" will appear, so you can:**
 - Define the flows name;
 - Attribute keyword triggers;
 - Specify how much time a contact can stay inactive on the flow before being deleted;
 - Select the type of flow that you would like to create;
 - Define the language that you will edit it.
 
-When the adequate attributes are defined, click on the “Create” button to go to the flow editor.
+When the adequate attributes are defined, click on the "Create" button to go to the flow editor.
 
 ![](/img/flow/flow14.png)
 
@@ -23,5 +23,4 @@ When the adequate attributes are defined, click on the “Create” button to go
 **Best Edition Practices**
 1. Keep the proportion of 1:1 Answer/Message. 
 2. Do not build flows horizontally; the flow editor has a limited capacity for horizontal flows.  We recommend you to build flows in a  vertical direction 
-3. Segment your flows if  they are too large. Consider dividing it in other flows by using “Start another flow”.
-
+3. Segment your flows if they are too large. Consider dividing it in other flows by using "Start another flow".
