--- a/en/flows/06.07- Action Set.md
+++ b/en/flows/06.07- Action Set.md
@@ -1,10 +1,10 @@
-##Action Sets - Old Editor##
+## Action Sets - Old Editor
 
 Action Sets represents activities done in your flow, 
 
 ![](/img/flow/flow24.png)
 
-these actions allow you to:
+These actions allow you to:
 
 - Send a response message;
 - Send a message to somebody else;
@@ -13,38 +13,38 @@ these actions allow you to:
 - Add a contact to a group;
 - Remove a contact from a group;
 - Send an email;
-- Set language for a contact;
-- Set prefered channel; 
+- Set the language for a contact;
+- Set the prefered channel; 
 - Start another flow.
 
 Action sets comprehend actions that are executed immediately, on the top-down order:
 
 ![](/img/flow/flow25.png)
 
-#### Creating Action Sets - Old Editor ####
+#### Creating Action Sets - Old Editor
 
 When you start a new flow, you need to create an Action Set. You can do that following the steps below:
 
-1.	Click on “Create Message”
+1.	Click on "Create Message"
 
 ![](/img/flow/createmsg.png)
 
-2. A box with a list of “Action Sets” will pop-up, select the action set you want and create it.
+2. A box with a list of "Action Sets" will pop-up, select the action set you want and create it.
 
 ![](/img/flow/flow24.png)
 
-3. In this example, we created a “Send a response message” action.
+3. In this example, we created a "Send a response message" action.
 
 ![](/img/flow/actionset.png)
 
 
-#### Adding an Action Set to an existing Action Set - Old Editor ####
+#### Adding an Action Set to an existing Action Set - Old Editor
 
-Actions can be connected to others Action Sets, these activities will be executed in a top-down order within your flow. 
+Actions can be connected to other Action Sets, these activities will be executed in a top-down order within your flow. 
 
 To add an Action Set to and existing action set do as described below:
 
-1.	Click on the symbol “+” on the button right of the existing action 
+1.	Click on the symbol "+" on the button right of the existing action 
 
 ![](/img/flow/addaction.png)
 
@@ -56,20 +56,20 @@ To add an Action Set to and existing action set do as described below:
 
 ![](/img/flow/createaction1.png)
 
- 
-#### Deleting an Action - Old Editor ####
+ 
+#### Deleting an Action - Old Editor
 
 To delete an action within your flow do as described below:
 
-1. Move the cursor on the action that you want to delete and click on the “x” icon. 
+1. Move the cursor on the action that you want to delete and click on the "x" icon. 
 
-2. The action will become red and will request a deleting confirmation. Click on the “x” icon again to conclude the deleting process.
+2. The action will become red and will request a deleting confirmation. Click on the "x" icon again to conclude the deleting process.
 
 ![](/img/flow/removeaction.png)
 
-##Actions - New Editor##
+## Actions - New Editor
 
-In the New Editor we now have *Actions* instead of *Action Sets*. When creating flows in the new editor you will also be able to:
+In the New Editor, we now have *Actions* instead of *Action Sets*. When creating flows in the new editor you will also be able to:
 
 1.	Send the contact a message;
 2.	Label the incoming message;
@@ -87,23 +87,23 @@ In the New Editor we now have *Actions* instead of *Action Sets*. When creating 
 
 *Actions 10 and 11 used to be Rule actions on the old editor.*
 
-#### Creating Action - New Editor ####
+#### Creating Action - New Editor
 
 To create an Action in a new flow do as described below:
 
-1. Click on “Create Message”
+1. Click on "Create Message"
 
 ![](/img/flow/createmsg.png)
 
-2.	A box with a list of “Actions” will pop-up, select the action you want and create it.
+2.	A box with a list of "Actions" will pop-up, select the action you want and create it.
 
 ![](/img/flow/createaction2.png)
 
-##Adding an Action to an existing action - New Editor##
+## Adding an Action to an existing action - New Editor
 
-Actions can be added to others actions and these activities will be executed in a top-down order within your flow. To add an Action to and existing action do as described below:
+Actions can be added to others' actions and these activities will be executed in a top-down order within your flow. To add an Action to and existing action do as described below:
 
-1.	Click on the symbol “+” on the button right of the existing action
+1.	Click on the symbol "+" on the button right of the existing action
 
 ![](/img/flow/addaction1.png)
 
@@ -111,11 +111,11 @@ Actions can be added to others actions and these activities will be executed in 
 
 ![](/img/flow/createaction2.png)
 
-#### Deleting an Action - New Editor ####
+#### Deleting an Action - New Editor
 To delete an action within your flow do as described below:
 
-1. Move the cursor on the action that you want to delete and click on the “x” icon. 
+1. Move the cursor on the action that you want to delete and click on the "x" icon. 
 
-2. The action are going to become red and will request a deleting confirmation. Click on the “x” icon again to conclude the deleting process.
+2. The action are going to become red and will request a deleting confirmation. Click on the "x" icon again to conclude the deleting process.
 
 ![](/img/flow/removeaction1.png)
