--- a/en/flows/06.12-Adding Labels to Responses.md
+++ b/en/flows/06.12-Adding Labels to Responses.md
@@ -1,7 +1,7 @@
-Labeling the messages allow you to classify the responses according to a specific subject and organize your workspace.
+Labeling the messages allows you to classify the responses according to a specific subject and organize your workspace.
 
-##How It Works## 
-Imagine you are executing a study about welfare and the participants are invited to indicate how they are feeling every day - healthy or sick. You can label their responses by creating a label on the message guide or within your flow using “Add a label message” in the old editor or “Label the incoming message” in the new editor. 
+## How It Works
+Imagine you are executing a study about welfare and the participants are invited to indicate how they are feeling every day - healthy or sick. You can label their responses by creating a label on the message guide or within your flow using "Add a label message" in the old editor or "Label the incoming message" in the new editor. 
 
 Learn bellow how to create a label on the message guide:
 
@@ -13,11 +13,11 @@ Learn bellow how to create a label on the message guide:
 
 ![](/img/flow/flow36.png)
 
-3. Then, you can give a name to the new label or choose an ecxisting one;
+3. Then, you can give a name to the new label or choose an existing one;
 
 ![](/img/flow/flow37.png)
 
-## Add a Label message - Old Editor ##
+## Add a Label message - Old Editor
 Add a label is so easy as create an ActionSet, or add an ActionSet to an ActionSet existent. You can choose an existent label or create a new using the Add Label dialog box.
 
 1.	Go to the flow editor;
@@ -28,12 +28,12 @@ Add a label is so easy as create an ActionSet, or add an ActionSet to an ActionS
 
 ![](/img/flow/flow38.png)
 
-4. Choose one or more labels create new ones.
+4. Choose one or more labels to create new ones.
 
 ![](/img/flow/flow39.png)
 
-## Add a Label message - New Editor ##
-Click on "Label the Incoming Message" to label your contacts responses.
+## Add a Label message - New Editor
+Click on "Label the Incoming Message" to label your contact's responses.
 
 1.	Go to the flow editor;
 
