--- a/en/flows/06.13-Sending an Email.md
+++ b/en/flows/06.13-Sending an Email.md
@@ -1,4 +1,4 @@
-Use the Send an Email to send an Email using the flow. The resulting email can contain values referred using:
+Use the Send an Email to send an Email using the flow. The resulting email can contain values referred to using:
 
 - @contact
 
@@ -12,7 +12,7 @@ Use the Send an Email to send an Email using the flow. The resulting email can
 
 - @extra, ex.: @ (HOUR (NOW ()))
 
-## To send an Email ##
+## To send an Email
 
 **Old Editor**
 
@@ -24,7 +24,7 @@ Use the Send an Email to send an Email using the flow. The resulting email can
 
 ![](/img/flow/flow41.png)
 
-3. Select the option “Send an Email” on the drop-down menu.  Here you set to whom you will send the message, subject and write the email on the box. 
+3. Select the option "Send an Email" on the drop-down menu. Here you set to whom you will send the message, subject and write the email on the box. 
 
 ![](/img/flow/flow42.png)
 
@@ -35,16 +35,15 @@ Use the Send an Email to send an Email using the flow. The resulting email can
 
 ![](/img/flow/chooseemail.png)
 
-3. Select the option “Send an Email” on the drop-down menu.  Here you will set to whom you will send the message, subject and write the email on the box. Click on ok to send it 
+3. Select the option "Send an Email" on the drop-down menu. Here you will set to whom you will send the message, subject and write the email on the box. Click on ok to send it 
 
 ![](/img/flow/sendemail.png)
 
 
-## Creating a Pipeline Email ##
+## Creating a Pipeline Email
 
-This action is a simple way to send a question from a contact to a team member. You just need to create a flow asking for a contact name, question and favorite response method. Then configure the platform to send an email containing this information outside of the platform or slack channel. The team members will be capable to instantaneously access the ticket through your CRM or Slack ID and response appropriately.
+This action is a simple way to send a question from a contact to a team member. You just need to create a flow asking for a contact name, question and favorite response method. Then configure the platform to send an email containing this information outside of the platform or slack channel. The team members will be capable of instantaneously access the ticket through your CRM or Slack ID and response appropriately.
 
 ![](/img/flow/flow43.png)
 
-The variable @flow.first_name refer the contact name if you get it on the previous step, while @flow.order and @flow.favorite_channel refer the contact order and the way that you want to get the response (SMS, Call, Email), respectively. Notice that, if the field “Name” is from a filled contact, you can replace @flow.name to @contact.name or @contact.first_name.
-
+The variable @flow.first_name refers to the contact name if you get it on the previous step, while @flow.order and @flow.favorite_channel refer the contact order and the way that you want to get the response (SMS, Call, Email), respectively. Notice that, if the field "Name" is from a filled contact, you can replace @flow.name to @contact.name or @contact.first_name.
