--- a/en/flows/06.17- Response Rule.md
+++ b/en/flows/06.17- Response Rule.md
@@ -10,16 +10,16 @@ Notice that, the response rule combining with categories names will be represent
 
 The response rules allow you:
 
-Categorize multiples responses in an unique category. For example, if you are asking for your contacts their favorite drink, you can create rules to allow “Coca” and “Pepsi”, be categorized as “Cola”.
-Alter the numerical answers to narrative answer or the opposite. For example, if you ask to your contacts about your satisfaction using a service in a 1 to 5 scale, you can create a rule to allow the answer “1” be classified as “bad” and “5” can be classified as “excellent”.Define an acceptable interval to a numerical answer.
-Inesparated responses are sent directly to the “Others” category. For example, if you are asking your contacts about gender and receive the answer “Cat”, this answer will be categorized as  “Others”.
-Translate the answers, so the affirmative answers like “Yego” (Kinyarwanda) or “Si” (Spanish) are categorized as “Yes”.
+Categorize multiples responses in an unique category. For example, if you are asking for your contacts their favorite drink, you can create rules to allow "Coca" and "Pepsi", be categorized as "Cola".
+Alter the numerical answers to narrative answer or the opposite. For example, if you ask to your contacts about your satisfaction using a service in a 1 to 5 scale, you can create a rule to allow the answer "1" be classified as "bad" and "5" can be classified as "excellent".Define an acceptable interval to a numerical answer.
+Inesparated responses are sent directly to the "Others" category. For example, if you are asking your contacts about gender and receive the answer "Cat", this answer will be categorized as  "Others".
+Translate the answers, so the affirmative answers like "Yego" (Kinyarwanda) or "Si" (Spanish) are categorized as "Yes".
 
-## Special Response Rules ##
+## Special Response Rules
 
 **Has a phone number**
 
-You can use the “has a phone number” to validates the answer including something that looks like a valid phone number. The answer will be saved as a qualified number. For example, if someone answers with the number 0788123123, this number will be saved as 250.788.123.123. If the valid phone number is not presented, you can ask the contacts to answer again.
+You can use the "has a phone number" to validates the answer including something that looks like a valid phone number. The answer will be saved as a qualified number. For example, if someone answers with the number 0788123123, this number will be saved as 250.788.123.123. If the valid phone number is not presented, you can ask the contacts to answer again.
 
 **Matches Regex**
 
@@ -28,27 +28,27 @@ For example, if we are asking someone to introduce a serial number from the regi
 
 ![](/img/flow/flow54.png)
 
-We know that the validates serial number should start with the “U” and has exactly nine digits, so we can verificate the serial numbers using:
+We know that the validates serial number should start with the "U" and has exactly nine digits, so we can verificate the serial numbers using:
 
 ![](/img/flow/flow55.png)
  
-## Observations about regular expressions: ##
+## Observations about regular expressions:
 
 They are not case sensitive (they don't differ upper and lower case), so you don't need to put different options on the box base.
-The  “groups” of regular expressions are available after the register using @extra. The group 0 is available as @extra.0, the first group as @extra.1.
+The  "groups" of regular expressions are available after the register using @extra. The group 0 is available as @extra.0, the first group as @extra.1.
 The value saved on the flow will be the group 0.
  
-## Collect different selections: ##
+## Collect different selections:
 
-Notice that, although collect a unique response to a question with various options, you can use the “has a number equal to” to catch multiple choose with an only one answer. There is an example:
-Choose your favorite color: “Send a message” below ask the user to choose his favorite color, or select multiples if he has more than one. Each choose is coded by a number, that allows you to collect different selections in numerical order. This will avoid the necessity to answer all possible combinations.
+Notice that, although collect a unique response to a question with various options, you can use the "has a number equal to" to catch multiple choose with an only one answer. There is an example:
+Choose your favorite color: "Send a message" below ask the user to choose his favorite color, or select multiples if he has more than one. Each choose is coded by a number, that allows you to collect different selections in numerical order. This will avoid the necessity to answer all possible combinations.
  
 ![](/img/flow/flow56.png)
  
-The split step correspondent could use “has a number equal to” to categorize all possible answers:
+The split step correspondent could use "has a number equal to" to categorize all possible answers:
 
 ![](/img/flow/flow57.png)
  
-Any answer that not corresponds to the response rules above will be classified as “Other”. You can redirect a loop to connect the “Other” with a message reaffirming an acceptable answer format, so give the user the opportunity to answer correctly.
+Any answer that not corresponds to the response rules above will be classified as "Other". You can redirect a loop to connect the "Other" with a message reaffirming an acceptable answer format, so give the user the opportunity to answer correctly.
  
 ![](/img/flow/flow58.png)
