--- a/en/flows/06.23-Exporting and Importing a Flow.md
+++ b/en/flows/06.23-Exporting and Importing a Flow.md
@@ -1,4 +1,4 @@
-## Export a flow: ##
+## Export a flow:
 Use this action to export Flows. You can export a flow to share it with another account or to save a specific version of your flow and use it in the future.
 
 1. Go to the flows guide;
@@ -15,9 +15,9 @@ Use this action to export Flows. You can export a flow to share it with another 
 
 ![](/img/flow/flow79.png)
 
-5. Click on Export button then a JSON file will be downloaded on your browser.
+5. Click on the Export button then a JSON file will be downloaded on your browser.
 
-## Import a flow: ##
+## Import a flow:
 Use this action to import flows to your account.
 
 1. Click on your account on the top right of the page.
@@ -31,4 +31,3 @@ Use this action to import flows to your account.
 3. Choose the file that you want to import and click on import.
 
 ![](/img/flow/flow82.png)
-
