--- a/en/groups/05.02- Creating a Group.md
+++ b/en/groups/05.02- Creating a Group.md
@@ -1,20 +1,20 @@
-## How to create a group ##
+## How to create a group
 
-1. Go to “Contacts” on the top right of the page;
+1. Go to "Contacts" on the top right of the page;
 
 ![](/img/groups/contact.png)
 
-2. Click on the box “Create Groups” on the bottom left of the page;
+2. Click on the box "Create Groups" on the bottom left of the page;
 
 ![](/img/groups/create_contact.png)
 
-3. Give to your group a name and click on the box “Create”. The new group will appear in the group directory on the bottom left of the page.
+3. Give your group a name and click on the box "Create". The new group will appear in the group directory on the bottom left of the page.
 
 ![](/img/groups/Create_group.png)
 
-## How to delete a group ##
+## How to delete a group
 
-1. Go to “Contacts” guide;
+1. Go to "Contacts" guide;
 
 ![](/img/groups/contact.png)
 
@@ -22,6 +22,6 @@
 
 ![](/img/groups/groups.png)
 
-3. Select the option “Delete Group” on the drop-down menu clicking on the gear icon.
+3. Select the option "Delete Group" on the drop-down menu clicking on the gear icon.
 
 ![](/img/groups/Delete_group.png)
