--- a/en/messages/03.01-Messages Introduction.md
+++ b/en/messages/03.01-Messages Introduction.md
@@ -2,31 +2,31 @@ Messages are the interactions realized when you send or receive a message using 
 
 ![](/img/messages/msg1.png)
 
-**Inbox:** The messages filed on the folder “Inbox”  are all messages received by a flow. Messages on this folder are sent by contacts that are not actives on the flow.
+**Inbox:** The messages filed on the folder "Inbox"  are all messages received by a flow. Messages on this folder are sent by contacts that are not actives on the flow.
 
-**Flows:** The messages files on the “Flows” folder includes messages received by their flows; Messages into this folder are sent by the contacts that are actives on the flows at the moment that the messages are sent.
+**Flows:** The messages files on the "Flows" folder includes messages received by their flows; Messages into this folder are sent by the contacts that are actives on the flows at the moment that the messages are sent.
 
-**Archived:** The file process remove the messages from the inbox, but keep them in your account, so you can found them later. Messages from your “Inbox” or  “Flows” can be filed on the folder “Archived”. If you want to delete some message, you should put it on the Archived folder and after that delete. All messages into the Archived folder can return to the original folder.
+**Archived:** The file process remove the messages from the inbox, but keep them in your account, so you can found them later. Messages from your "Inbox" or  "Flows" can be filed on the folder "Archived". If you want to delete some message, you should put it on the Archived folder and after that delete. All messages into the Archived folder can return to the original folder.
 
-**Outbox:** The folder “Outbox” contains pending messages that can accumulate a large broadcast activity. When the message has been sent, it is moved from the folder “outbox” to “Sent”.
+**Outbox:** The folder "Outbox" contains pending messages that can accumulate a large broadcast activity. When the message has been sent, it is moved from the folder "outbox" to "Sent".
 
-**Calls:** The folder “Calls” contains calls already done and received on the channel connected on your account. You can see the calls date, direction, and duration.
+**Calls:** The folder "Calls" contains calls already done and received on the channel connected on your account. You can see the calls date, direction, and duration.
 
 **Schedules:** The folder ¨Schedules¨ contains messages scheduled to be sent in the future. Go to this folder to see or edit scheduled messages.
 
-**Failed:** The folder “Failed” contains messages that failed when they was sent.
+**Failed:** The folder "Failed" contains messages that failed when they was sent.
 
-## The messages status ##
+## The messages status
 
 Each message is attributed to a symbol.
 
 ![](/img/messages/msg2.png)
 
-- The icon “arrived” indicates that a message has arrived, and it is followed by the text.
+- The icon "arrived" indicates that a message has arrived, and it is followed by the text.
 
 ![](/img/messages/msg3.png)
 
-- The “sent” icon indicates that the message was sent, but did not return a delivery confirmation. Some companies and channels are not able to provide the delivery confirmation. This message should be considered delivered at least the message is into the outbox folder.
+- The "sent" icon indicates that the message was sent, but did not return a delivery confirmation. Some companies and channels are not able to provide the delivery confirmation. This message should be considered delivered at least the message is into the outbox folder.
 
 ![](/img/messages/msg4.png)
 
