--- a/en/messages/03.01-Messages Introduction.md
+++ b/en/messages/03.01-Messages Introduction.md
@@ -6,15 +6,15 @@ Messages are the interactions realized when you send or receive a message using 
 
 **Flows:** The messages files on the "Flows" folder includes messages received by their flows; Messages into this folder are sent by the contacts that are actives on the flows at the moment that the messages are sent.
 
-**Archived:** The file process remove the messages from the inbox, but keep them in your account, so you can found them later. Messages from your "Inbox" or  "Flows" can be filed on the folder "Archived". If you want to delete some message, you should put it on the Archived folder and after that delete. All messages into the Archived folder can return to the original folder.
+**Archived:** The filing process removes the messages from the inbox, but keep them in your account, so you can found them later. Messages from your "Inbox" or  "Flows" can be filed on the folder "Archived". If you want to delete some message, you should put it on the Archived folder and after that delete. All messages into the Archived folder can return to the original folder.
 
 **Outbox:** The folder "Outbox" contains pending messages that can accumulate a large broadcast activity. When the message has been sent, it is moved from the folder "outbox" to "Sent".
 
-**Calls:** The folder "Calls" contains calls already done and received on the channel connected on your account. You can see the calls date, direction, and duration.
+**Calls:** The folder "Calls" contains calls already done and received on the channel connected to your account. You can see the call’s date, direction, and duration.
 
 **Schedules:** The folder ¨Schedules¨ contains messages scheduled to be sent in the future. Go to this folder to see or edit scheduled messages.
 
-**Failed:** The folder "Failed" contains messages that failed when they was sent.
+**Failed:** The folder "Failed" contains messages that failed to be delivered.
 
 ## The messages status
 
@@ -26,7 +26,7 @@ Each message is attributed to a symbol.
 
 ![](/img/messages/msg3.png)
 
-- The "sent" icon indicates that the message was sent, but did not return a delivery confirmation. Some companies and channels are not able to provide the delivery confirmation. This message should be considered delivered at least the message is into the outbox folder.
+- The "sent" icon indicates that the message was sent, but did not return a delivery confirmation. Some companies and channels are not able to provide delivery confirmation. This message should be considered delivered at least the message is into the outbox folder.
 
 ![](/img/messages/msg4.png)
 
@@ -34,9 +34,8 @@ Each message is attributed to a symbol.
 
 ![](/img/messages/msg5.png)
 
-- The transmitter icon indicates a broadcast transmission, and it is followed by the contacts numbers that are going to receive the message and their content.
+- The transmitter icon indicates a broadcast transmission, and it is followed by the contact numbers that are going to receive the message and their content.
 
 ![](/img/messages/msg6.png)
 
 - The Attention icon indicates that there is a failed message, and it is followed by the text. Notice that when you pass your mouse cursor on the icons will appear the channels for where they were sent or received.
-
