--- a/en/messages/03.03-Exporting Messages.md
+++ b/en/messages/03.03-Exporting Messages.md
@@ -6,7 +6,7 @@ The message can be exported from a spreadsheet to be validated for the platform.
 
 2. Click on the exportation box on the top right of the messages list;
 
-3. Select the contacts groups containing the messages that you want to export, after that, choose the starter and finished date to establish the gap to select the messages.
+3. Select the contact groups containing the messages that you want to export, after that, choose the starter and finished date to establish the gap to select the messages.
 
 ![](/img/messages/msg8.png)
 
