--- a/en/messages/03.06-Select a Message to Send Later.md
+++ b/en/messages/03.06-Select a Message to Send Later.md
@@ -8,7 +8,7 @@ The platform allows scheduled the messages to be sent in a determinate time and 
 
 ![](/img/messages/msg9.png)
 
-3. Type the text that you want to send, select the contact(s), after that click on the “Schedule” box.
+3. Type the text that you want to send, select the contact(s), after that click on the "Schedule" box.
 
 ![](/img/messages/msg10.png)
 
