--- a/en/messages/03.07-Adding Audio to the Message.md
+++ b/en/messages/03.07-Adding Audio to the Message.md
@@ -1,12 +1,12 @@
-There are two different ways to add a audio to your message, using a audio URL or upload a audio from your computer.
+There are two different ways to add audio to your message, using an audio URL or upload audio from your computer.
 
 Using Audio URL
 
-1. Click on flow icon;
+1. Click on the flow icon;
 
 ![](/img/messages/msg13.png)
 
-2. Choose a pre existing flow or create a new one;
+2. Choose a pre-existing flow or create a new one;
 
 3. Add an Action Set, and click on the attach icon on the bottom right;
 
@@ -22,15 +22,15 @@ Using Audio URL
 
 6. You can insert the audio URL, after that you can call the audio using the variable @extra.attachment_url.
 
-## Upload an Audio from your computer ##
+## Upload an Audio from your computer
 
-1. Click on flow icon;
+1. Click on the flow icon;
 
 ![](/img/messages/msg13.png)
 
-2. Choose a pre existing flow or create a new one;
+2. Choose a pre-existing flow or create a new one;
 
-3. Add a Action Set, and click on the attach icon on the bottom right;
+3. Add an Action Set, and click on the attach icon on the bottom right;
 
 ![](/img/messages/msg14.png)
 
@@ -39,4 +39,3 @@ Using Audio URL
 ![](/img/messages/msg15.png)
 
 5. Choose the file from your computer.
-
