content update and grammar fixes

--- a/en/campaign/08.02- Creating, archiving and activating a Campaign.md
+++ b/en/campaign/08.02- Creating, archiving and activating a Campaign.md
@@ -1,6 +1,6 @@
 A campaign requires a name and a contact group to receive the events. Each campaign just can operate in a group; if you want to create a campaign for other groups, you can't use the campaign already used.
 
-## Creating a Campaign ##
+## Creating a Campaign
 
 1. Go to the campaign guide.
 
@@ -14,7 +14,7 @@ A campaign requires a name and a contact group to receive the events. Each campa
 
 ![](/img/campaign/campaign3.png)
 
-## Archiving a Campaign ##
+## Archiving a Campaign
 
 To inactive a campaign, you should archive it. You just need to:
 
@@ -24,7 +24,7 @@ To inactive a campaign, you should archive it. You just need to:
 
 ![](/img/campaign/campaign4.png)
 
-## Activating a Campaign ##
+## Activating a Campaign
 
 If you want to reactivate a campaign you should:
 
