--- a/en/campaign/08.03- Adding and Editing an Event to the Campaign.md
+++ b/en/campaign/08.03- Adding and Editing an Event to the Campaign.md
@@ -21,7 +21,7 @@ A campaign event represents an action that will realize a relation with a date a
 
 You can add how many events as necessary.
 
-## Editing Events ##
+## Editing Events
 
 To edit when a message or flow will be sent, alter the flow, or change the action Send a Message to Start a Flow as a campaign event:
 
