--- a/en/channels/02.08-Creating a flow to a surveyor.md
+++ b/en/channels/02.08-Creating a flow to a surveyor.md
@@ -8,7 +8,7 @@ Our [Surveyor Android Application](https://rapidpro-apk.s3-sa-east-1.amazonaws.c
 
 Surveyor Flows differ from SMS or voice that is destined to be used in the Surveyor Android Application where the internet and cell phone signal are weak or non-existent. The send messages are immediately answered, and the flows' results are saved until you are able to send to the account through the internet. Notice that, the Surveyor's flows are started through the Surveyor Android App.
 
-## Creating a flow ##
+## Creating a flow
 
 1. To create a flow, go to Flows guide and select "Create a Flow".
 
