--- a/en/channels/02.01-Channels Introduction.md
+++ b/en/channels/02.01-Channels Introduction.md
@@ -1,30 +1,30 @@
 <div class="align-justify">
 
-Channels are the bridge that connects the chat you build on Rapid Pro to your contacts. It allows your workspace to broadcast polls you create. There are more than 20 channels available in Rapid Pro and they can be classified as follow:
+Channels are the bridge that connects the chat you build on the platform to your contacts. It allows your workspace to broadcast polls you create. There are more than 20 channels available and they can be classified as follow:
 
-### Channels Type ###
+### Channel Types
 
-**Android Phones:** 
+**Android Phones:**
 Allow you to send SMS from the platform using an android phone. This channel is recommended only if you are planning to send a low number of messages.
 
-**Phone channels:** 
+**Phone channels:**
 Allow you to send voice messages or SMS from the platform to your contacts through a phone. You will need a local sim card number to activate these channels.
 
 **Social Network channels:**
 Use popular social networks as Facebook messenger, twitter, telegram, Viber and so on to create a bridge between your contact and the polls you want to broadcast from the platform. 
 
-**API channels:** 
+**API channels:**
 allow you to connect an external aggregator or messaging service to the platform using our external API.
 
 *You can connect as many channels as you want, but it’s important to consider carefully which channels will be more popular among your contacts.*
 
-### Aggregator (SMS and Voice)###
+### Aggregator (SMS and Voice)
 
- Aggregators are services that process messages through multiples operators efficiently and fastly. It processes virtual numbers and codes that are easily connected to your account through integration with the platform. Twilio, Plivo, Nexmo are examples of globals aggregators and Clickatell and Zevia are examples of locals aggregators. We recommend searching local aggregators before connect with a global aggregator (the price of local aggregators is usually cheaper than global aggregators).
- 
-**Android Phones:** 
+Aggregators are services that process messages through multiples operators efficiently and fastly. It processes virtual numbers and codes that are easily connected to your account through integration with the platform. Twilio, Plivo, Nexmo are examples of globals aggregators and Clickatell and Zevia are examples of locals aggregators. We recommend searching local aggregators before connect with a global aggregator (the price of local aggregators is usually cheaper than global aggregators).
 
- The Android Phone channel uses our Android Free App to transform your phone in a message transmitter to your account. When your account sends a message, your cell phone will be notified. The cell phone will send a message using your local number and your name. If someone answers this message, the cell phone will retransmit the message to your workspace. You can send up to 330 messages by an hour. 
+**Android Phones:**
+
+The Android Phone channel uses our Android Free App to transform your phone in a message transmitter to your account. When your account sends a message, your cell phone will be notified. The cell phone will send a message using your local number and your name. If someone answers this message, the cell phone will retransmit the message to your workspace. You can send up to 330 messages by an hour.
 
  We recommend this channel if you:
 
@@ -33,11 +33,11 @@ allow you to connect an external aggregator or messaging service to the platform
 - Want to implement in a country where the virtual numbers and shortcodes are not available yet.
 - Transmitter tax is a message per second.
 
-**SMS:** 
+**SMS:**
 
 This channel is recommended to medium and high flows because the messages are forwarded in their highest frequency. The transfer tax for free numbers from Twilio is 3 messages by second, while the standard transfer tax is a message by second. We recommend you to buy a free virtual number by Twilio to implement the SMS service on the USA and Canada, to more locals we recommend to buy a conventional number.
 
-**Voice:** 
+**Voice:**
 
 Use a Twilio number with voice available (can be by default or toll-free) to send and receive voice messages or connect your Twilio voice and an Android Phone with your workspace.
 You can try our demonstrative voice flow through the phone number +1 888-531-0777, or sending an SMS with the word "Hey". Notice that this is a number located in the USA. 
@@ -45,11 +45,11 @@ Discount for unprofitable organizations: Twilio offers US$ 500 in credits and 25
 
 ### Bulk Sending
 
-This channel is ideal for Android channel implementations that need to send more than 330 messages per hour. You will need to create and connect a Nexmo account in your workspace. When you enable the Sending Bulk, Nexmo will be responsible to send your messages keeping the sender identification in your Android Cell Phon, our Android will take care of the received messages then. The transfer tax is a message per second. 
+This channel is ideal for Android channel implementations that need to send more than 330 messages per hour. You will need to create and connect a Nexmo account in your workspace. When you enable the Sending Bulk, Nexmo will be responsible to send your messages keeping the sender identification in your Android Cell Phone, our Android will take care of the received messages then. The transfer tax is a message per second. 
 
 ### Surveyor
 
-The RapidPro Surveyor Android App allows that you monitor the workflow to glean offline data using an Android CellPhone.
+The Surveyor Android App allows that you monitor the workflow to glean offline data using an Android CellPhone.
 
 ### Telegram
 
@@ -57,11 +57,11 @@ Telegram is a service based on the cloud to send messages instantly - similar to
 
 ### Twitter
 
-Connect your Twitter account and send up to 1000 direct messages per day through your RapidPro account.
+Connect your Twitter account and send up to 1000 direct messages per day through your account.
 
 ### Facebook Messenger
 
-Connect a Facebook page account to your RapidPro workspace to communicate with your contacts.
+Connect a Facebook page account to your workspace to communicate with your contacts.
 
 ### External API
 
@@ -69,7 +69,5 @@ The API channel allows sending and receiving messages through external suppliers
 For example, if you want to enjoy the platform automation provides through an external service, you could develop a link to your system and connect them through your API.
 
 As your contacts have the URN, type how your channel was configured, we will send messages using an extreme point to configure.
-
-##
 
 </div>
