--- a/en/contacts/04.01-Contact Introduction.md
+++ b/en/contacts/04.01-Contact Introduction.md
@@ -1,4 +1,4 @@
-A contact is a final user that interacted or will interact with the RapidPro. The communication with the contacts happens through a channel. 
+A contact is the final user that interacted or will interact with the platform. The communication with the contacts happens through a channel. 
 
 **A contact can:**
 
@@ -35,4 +35,4 @@ There are two ways to make a reference to the contacts fields into the flow:
 
 ![](/img/contact/send_msh.png)
 
-As the message created by "Send a Message to Someone Else" was sent to Nelson RapidPro, @contact.first_name will be replaced for Nelson. @step.contact.name and @step.contact.tel will be replaced for the user name and phone number that needs support.
+As the message created by "Send a Message to Someone Else" was sent to John Cordeiro, @contact.first_name will be replaced for John. @step.contact.name and @step.contact.tel will be replaced for the user name and phone number that needs support.
