Filename and grammar fixes

--- a/en/flows/06.01 - Flow Introduction.md
+++ b/en/flows/06.01 - Flow Introduction.md
@@ -51,7 +51,7 @@ Rule Sets comprehend 5 entries that allow you to build a powerful conditional in
 
 2. Depending on the type of command selected, this is the value that the rules are going to be evaluated. This value, requires an operator, represents a variable or an expression. On the ruleset on the picture below, "If the message.." indicates that the operator is @step.value or a received message.
 
-3. "Response Rules": evaluate the selected operator. Response Rules are executed from left to right. The first rule correspondent starts. RapidPro combines one word per time and just one individually rule on the original string order. 
+3. "Response Rules": evaluate the selected operator. Response Rules are executed from left to right. The first rule correspondent starts. The platform combines one word per time and just one individually rule on the original string order. 
 
 ![](/img/flow/flow5.png)
 
