--- a/en/flows/06.16 - Rule Set.md
+++ b/en/flows/06.16 - Rule Set.md
@@ -30,7 +30,7 @@ Rule Sets comprehends 5 entries that allow building powerful conditional instruc
 *Flow contact comprehends the available variables on a determined flow. These are flow variables using action sets, but you can also include associated contacts variables from a contact associated with a contact through a flow, or obtained data from an external font through a webhook.
 
 2. According to the selected command, this is the value that the rules are evaluated. This value, call an operator, represented for a variable or expression. The ruleset on the picture above, "if the response message .." indicates that the operator is @step.value or a received message.
-3. Response Rules: evaluate the selected operator. Response rules are executed from left to right. The first rule that corresponds is used and not the other rules, that will be evaluated after that. RapidPro combines each word just once and just to an individual rule in the original string order.
+3. Response Rules: evaluate the selected operator. Response rules are executed from left to right. The first rule that corresponds is used and not the other rules, that will be evaluated after that. The platform combines each word just once and just to an individual rule in the original string order.
 
 ![](/img/flow/flow50.png)
 
