--- a/en/telegram/10.01 - Introduction to Telegram Channel.md
+++ b/en/telegram/10.01 - Introduction to Telegram Channel.md
@@ -11,7 +11,7 @@ Exists 5 important reasons that make Telegram our first choice to messages based
 
 **How does it work?**
 
-Your Telegram channel will be represented by a bot. Telegram Bots are special accounts that will work as an interface for the flows and messages that will be sent by IlhaPush. Bots differ from the standard accounts because of it's: 
+Your Telegram channel will be represented by a bot. Telegram Bots are special accounts that will work as an interface for the flows and messages that will be sent by the platform. Bots differ from the standard accounts because of it's: 
 
 1. Don't have online status or the last message seen, the interface shows the label 'bot'.
 2. The usernames always finish in 'bot' (for example,@YouNameBot, @YorName_bot).
